--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
       </tr>
     </tbody>
   </table>
-  <p><strong>Si desea contactarme:<em><a href="file:///home/munich/Desktop/K-codigo/contact/contct%20me.html">presione aqui</a></em></strong></p>
+  <p><strong>Si desea contactarme:<em><a href="contct me.html">presione aqui</a></em></strong></p>
 
 </body>
 
