--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
   <table cellspacing="5">
     <tbody border="1">
       <tr>
-        <td>legue of leyends</td>
+        <td>league of legends</td>
         <td>⭐⭐⭐⭐</td>
         <td>ajedrez</td>
         <td>⭐⭐⭐</td>
