--- a/index0.1.html
+++ b/index0.1.html
@@ -36,7 +36,7 @@
     <li>el caballo</li>
     <li>el bufon</li>
   </ul>
-  <h3>hobbies</h3>
+  <h3>hobbies y pasatiempos</h3>
   <ol>
     <em><strong>
         <li><a href="https://i.ytimg.com/vi/_u8opNKe_98/maxresdefault.jpg">comida</a></li>
@@ -101,7 +101,7 @@
       </tr>
     </tbody>
   </table>
-  <p><strong>Si desea contactarme:<em><a href="/home/munich/Desktop/K-codigo/K-HTML/contct me.html">presione aqui</a></em></strong></p>
+  <p><strong>Si desea contactarme:<em><a href="/home/munich/Desktop/K-codigo/K-HTML y documentos/contct me.html">presione aqui</a></em></strong></p>
 
 </body>
 
